--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,8 @@ spring:
       settings.trace: false
       settings.web-allow-others: false
   datasource:
-    url: jdbc:h2:file:/data
+    #url: jdbc:h2:file:/data/demo
+    url: jdbc:h2:mem:testdb
     username: sa
     password: password
     driverClassName: org.h2.Driver
