--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,23 @@ spring:
     username: sa
     password: password
     driverClassName: org.h2.Driver
+  sql:
+    init:
+      platform: h2
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
         globally_quoted_identifiers: true
     defer-datasource-initialization: true
+    hibernate:
+      ddl-auto: create
+logging:
+  level:
+    org:
+      springframework:
+        web: INFO
+      hibernate: ERROR
+  file:
+    path: .
+    name: crudLogFile.log
