removed unused services from BaseService

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,7 @@ spring:
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
+    show-sql: true
 logging:
   level:
     org:
